crates/shipper-types/src/snapshots/shipper_types__tests__snapshots__environment_fingerprint_snapshot.snap
---
source: crates/shipper-types/src/lib.rs
expression: fp
---
shipper_version: 0.3.0
cargo_version: 1.82.0
rust_version: 1.82.0
os: linux
arch: x86_64
