crates/shipper-types/src/snapshots/shipper_types__tests__snapshots__execution_state_all_pending.snap
---
source: crates/shipper-types/src/lib.rs
expression: state
---
state_version: shipper.state.v1
plan_id: plan-fresh
registry:
  name: crates-io
  api_base: "https://crates.io"
  index_base: "https://index.crates.io"
created_at: "2025-01-15T12:00:00Z"
updated_at: "2025-01-15T12:00:00Z"
attempt_history: []
packages:
  alpha@0.1.0:
    name: alpha
    version: 0.1.0
    attempts: 0
    state:
      state: pending
    last_updated_at: "2025-01-15T12:00:00Z"
  beta@0.2.0:
    name: beta
    version: 0.2.0
    attempts: 0
    state:
      state: pending
    last_updated_at: "2025-01-15T12:00:00Z"
  gamma@0.3.0:
    name: gamma
    version: 0.3.0
    attempts: 0
    state:
      state: pending
    last_updated_at: "2025-01-15T12:00:00Z"
