crates/shipper-types/src/snapshots/shipper_types__tests__snapshots__execution_state_snapshot.snap
---
source: crates/shipper-types/src/lib.rs
expression: state
---
state_version: shipper.state.v1
plan_id: plan-42
registry:
  name: crates-io
  api_base: "https://crates.io"
  index_base: "https://index.crates.io"
created_at: "2025-01-15T12:00:00Z"
updated_at: "2025-01-15T12:00:00Z"
attempt_history: []
packages:
  core-lib@0.1.0:
    name: core-lib
    version: 0.1.0
    attempts: 1
    state:
      state: published
    last_updated_at: "2025-01-15T12:00:00Z"
  my-cli@0.2.0:
    name: my-cli
    version: 0.2.0
    attempts: 0
    state:
      state: pending
    last_updated_at: "2025-01-15T12:00:00Z"
