crates/shipper-types/src/snapshots/shipper_types__tests__snapshots__git_context_full_snapshot.snap
---
source: crates/shipper-types/src/lib.rs
expression: ctx
---
commit: a1b2c3d4e5f6
branch: release/v2.0
tag: v2.0.0
dirty: false
