crates/shipper-types/src/snapshots/shipper_types__tests__snapshots__git_context_minimal_snapshot.snap
---
source: crates/shipper-types/src/lib.rs
expression: ctx
---
commit: ~
branch: ~
tag: ~
dirty: ~
