crates/shipper-types/src/snapshots/shipper_types__tests__snapshots__package_state_pending.snap
---
source: crates/shipper-types/src/lib.rs
assertion_line: 1554
expression: state
---
state: pending
